# tauri-plugin-custom-dialog

./: Cargo.toml  README.md  event_wrappers.rs
examples/basic-test-app/: package.json
examples/basic-test-app/src/: customDialog.html  customDialog.js  index.html  main.js
examples/basic-test-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/basic-test-app/src-tauri/capabilities/: customDialog.json  default.json
examples/basic-test-app/src-tauri/src/: lib.rs  main.rs
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/capabilities/: default.json
examples/vanilla/src-tauri/src/: lib.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  event_wrappers.rs  lib.rs  mobile.rs  models.rs
