[package]
name = "tauri-plugin-custom-dialog"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-custom-dialog"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tracing"] }
serde = {version = "1.0", features = ["derive"]}
thiserror = "2"
serde_json = "1"
uuid = { version = "1.16.0", features = ["v4"] }
pin-project = "1.1.10"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
